# aprender

./: .bashrsignore  .cargo-mutants.toml  .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-gates.toml.bak  .pmat-metrics.toml  .pmat.yaml  .proptest.toml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  Makefile  PROVABLE_CONTRACTS_ANALYSIS.md  PROVABLE_CONTRACTS_INVENTORY.txt  PROVABLE_CONTRACTS_README.md  PROVABLE_CONTRACTS_SUMMARY.txt  QA-REPORT.md  README.md  RELEASE.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.6.md  ROADMAP.md  VERIFICATION_REPORT.md  build.rs  build_codegen.rs  build_parsing.rs  clippy.toml  codecov.yml  coverage-analysis.md  defect-report-20251216-134026.json  deny.toml  entrenar-contract-falsification-sweep.md  index.html  model.safetensors  models  (+13 more)
book/crates/aprender-shell/: Cargo.toml
crates/apr-cli/: Cargo.toml  README.md  build.rs
crates/apr-cli/.pmat/: deps-cache.json  project.toml
crates/apr-cli/.pmat/metrics/: dependencies.json
crates/apr-cli/docs/roadmaps/: roadmap.yaml
crates/apr-cli/examples/: federation_tui_demo.rs  gpu_chat_inference.rs  probar_tui_testing.rs  ptx_parity_validation.rs  serve_with_tracing.rs  tool_calling_demo.rs
crates/apr-cli/playbooks/: federation-gateway.yaml  visualization-tools.yaml
crates/apr-cli/playbooks/snapshots/: README.md  flow_cross_attn.txt  flow_full.txt  hex_dump.txt  tree_ascii.txt  tree_mermaid.md
crates/apr-cli/scripts/: qa-chat.sh  qa-run.sh  qa-serve.sh
crates/apr-cli/src/: commands_enum.rs  dispatch.rs  dispatch_analysis.rs  error.rs  extended_commands.rs  lib.rs  lib_07.rs  lib_execute_export_convert.rs  lib_extract_paths.rs  lib_parse_rosetta.rs  lib_parse_tensors.rs  lib_part_02.rs  lib_part_02_include_01.rs  lib_part_02_part_02.rs  lib_part_02_part_02_include_01.rs  lib_part_03.rs  lib_part_04.rs  lib_part_05.rs  lib_part_06.rs  lib_part_07.rs  lib_part_07_part_02.rs  lib_part_07_part_03.rs  lib_part_07_part_04.rs  lib_part_07_part_05.rs  lib_part_07_part_06.rs  lib_part_07_part_07.rs  lib_part_07_part_08.rs  lib_part_07_part_09.rs  lib_part_07_part_10.rs  lib_part_07_part_11.rs  lib_part_07_part_12.rs  lib_verbose_inheritance_parse.rs  main.rs  model_ops_commands.rs  output.rs  output_tests.rs  parsing.rs  pipe.rs  tool_commands.rs
crates/apr-cli/src/commands/: bench.rs  bench_04.rs  bench_brick_name.rs  bench_calculate_stats.rs  bench_part_02.rs  bench_part_03.rs  bench_part_04.rs  bench_part_04_part_02.rs  bench_part_04_part_03.rs  bench_safetensors.rs  benchmark.rs  canary.rs  canary_tests.rs  canary_tests_mean_threshold_std.rs  cbtop.rs  cbtop_06.rs  cbtop_app_tick_model.rs  cbtop_chrono_timestamp_get.rs  cbtop_get_cpu_memory.rs  cbtop_headless_report.rs  cbtop_part_02.rs  cbtop_part_03.rs  cbtop_part_04.rs  cbtop_part_06.rs  cbtop_part_06_part_02.rs  cbtop_part_06_part_05.rs  cbtop_part_06_part_06.rs  cbtop_part_06_part_08.rs  cbtop_part_06_part_09.rs  cbtop_render_title.rs  cbtop_report_tui.rs  chat.rs  chat_04.rs  chat_config.rs  chat_config_02.rs  chat_generate_safetensors.rs  chat_generate_session_02.rs  chat_load_tokenizers.rs  chat_part_02.rs  chat_part_02_part_02.rs  (+237 more)
crates/apr-cli/src/federation/: catalog.rs  catalog_tests.rs  gateway.rs  gateway_03.rs  gateway_part_03.rs  gateway_part_03_part_02.rs  gateway_part_03_part_03.rs  health.rs  health_tests.rs  health_tests_part_02.rs  middleware.rs  mod.rs  policy.rs  routing.rs  (+13 more)
crates/apr-cli/tests/: cli_integration.rs  cli_integration_part_02.rs  cli_integration_part_03.rs  cli_integration_part_04.rs  falsification_cross_crate_parity.rs  falsification_measurement_freshness.rs  pixel_regression.rs
crates/aprender-monte-carlo/: Cargo.toml  README.md
crates/aprender-monte-carlo/.pmat/: deps-cache.json  project.toml
crates/aprender-monte-carlo/src/: lib.rs  main.rs
crates/aprender-shell/: Cargo.toml  Dockerfile  Makefile  README.md
crates/aprender-shell/.pmat/: deps-cache.json  project.toml
crates/aprender-shell/benches/: recommendation_latency.rs  shell_benchmarks.rs
crates/aprender-shell/proptest-regressions/: model.txt
crates/aprender-shell/scripts/: chaos-baseline.sh
crates/aprender-shell/src/: config.rs  corpus.rs  error.rs  history.rs  lib.rs  main.rs  main_cmd_daemon.rs  main_cmd_tune_name.rs  main_part_02.rs  main_part_05.rs  main_part_06.rs  main_part_07.rs  model.rs  model_markov.rs  model_part_02.rs  model_part_02_part_02.rs  model_part_02_part_03.rs  model_part_03.rs  model_part_04.rs  model_part_05.rs  paged_model.rs  paged_model_part_02.rs  paged_model_part_03.rs  paged_model_stats.rs  quality.rs  remove.rs  security.rs  suggestion_helpers.rs  synthetic.rs  synthetic_command_generator.rs  synthetic_default_command_mutator.rs  synthetic_default_templates_command.rs  synthetic_part_02.rs  synthetic_part_02_part_02.rs  synthetic_part_02_part_03.rs  synthetic_part_02_part_04.rs  trie.rs  validation.rs
crates/aprender-shell/tests/: cli_integration.rs  cli_integration_part_02.rs  cli_integration_part_03.rs  cli_integration_part_04.rs  performance_tests.rs  real_world_tests.rs  real_world_tests_part_02.rs
crates/aprender-tsp/: Cargo.toml  Makefile  README.md
crates/aprender-tsp/.pmat/: deps-cache.json  project.toml
crates/aprender-tsp/benches/: tsp_benchmarks.rs
crates/aprender-tsp/data/: att48.tsp  berlin52.tsp  eil51.tsp
crates/aprender-tsp/examples/: tsp_algorithm_comparison.rs  tsp_benchmark.rs  tsp_model_persistence.rs
crates/aprender-tsp/models/: README.md  att48-aco.apr  berlin52-aco.apr  eil51-aco.apr
crates/aprender-tsp/src/: error.rs  lib.rs  main.rs  main_cmd_benchmark.rs  model.rs  model_model.rs  model_part_02.rs  payload_reader.rs
crates/aprender-tsp/tests/: integration_tests.rs  property_tests.rs
fuzz/: Cargo.toml
fuzz/.pmat/: deps-cache.json  project.toml
fuzz/.pmat/metrics/: dependencies.json
fuzz/fuzz_targets/: fuzz_apr_metadata.rs  fuzz_chat_template_detect.rs  fuzz_format_detection.rs  fuzz_gguf_header.rs  fuzz_hf_uri.rs  fuzz_sharded_index.rs  fuzz_target_1.rs  fuzz_tensor_name_map.rs
(+2645 files in other folders)
